hphp/hack/test/fanout/modules/module-change-membership.php.incr_old_decl.exp
=== base errors ===
No errors!
=== changed errors ===
g.php:5:5,5: Cannot access an internal element from module `B` in module `A` (Typing[4444])
  f.php:4:19,19: This is from module `B`
=== fanout ===
Fun g
